Modified index.html and removed few CSS

--- a/index.html
+++ b/index.html
@@ -7,14 +7,6 @@
     <title>Amy</title>
     <link rel="shortcut icon" type="image/png" ng-href="{{::globalCtrl.organization.logoURL}}" />
 
-    <!-- Vendor CSS -->
-    <link href="bower_components/animate.css/animate.min.css" rel="stylesheet">
-    <link href="bower_components/material-design-iconic-font/dist/css/material-design-iconic-font.min.css"
-          rel="stylesheet">
-    <link href="bower_components/bootstrap-sweetalert/lib/sweet-alert.css" rel="stylesheet">
-    <link href="bower_components/angular-loading-bar/src/loading-bar.css" rel="stylesheet">
-    <link href="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.min.css"
-          rel="stylesheet">
 
     <!-- CSS -->
     <link href="styles/css/app.min.1.css" rel="stylesheet" id="app-level">
@@ -33,6 +25,7 @@ Hello again. This is Shashank Agrawal. I'm changing this file.
     </ui-view>
 
     <!-- Core -->
+    Lorem <link rel="import" href="">
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- Angular -->
