Added code for signup feature.

--- a/index.html
+++ b/index.html
@@ -24,74 +24,7 @@ Hello again. This is Shashank Agrawal. I'm changing this file.
         </div>
     </ui-view>
 
-    <!-- Core -->
-    Lorem <link rel="import" href="">
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-
-    <!-- Angular -->
-    <script src="bower_components/angular/angular.min.js"></script>
-    <script src="../bower_components/angular-server-timezone/dist/angular-server-timezone.min.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.min.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.min.js"></script>
-
-    <!-- Angular Modules -->
-    <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="bower_components/angular-loading-bar/src/loading-bar.js"></script>
-    <script src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
-    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-
-    <!-- Common Vendors -->
-    <script src="bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="bower_components/bootstrap-sweetalert/lib/sweet-alert.min.js"></script>
-    <script src="bower_components/Waves/dist/waves.min.js"></script>
-    <script src="scripts/vendor/bootstrap-growl/bootstrap-growl.min.js"></script>
-    <script src="bower_components/ng-table/dist/ng-table.min.js"></script>
-
-
-    <!-- Placeholder for IE9 -->
-    <!--[if IE 9 ]>
-    <script src="bower_components/jquery-placeholder/jquery.placeholder.min.js"></script>
-    <![endif]-->
-
-    <!-- Using below vendors in order to avoid misloading on resolve -->
-    <script src="bower_components/flot/jquery.flot.js"></script>
-    <script src="bower_components/flot.curvedlines/curvedLines.js"></script>
-    <script src="bower_components/flot/jquery.flot.resize.js"></script>
-    <script src="bower_components/moment/min/moment.min.js"></script>
-    <script src="bower_components/fullcalendar/dist/fullcalendar.min.js"></script>
-    <script src="bower_components/flot-orderBars/js/jquery.flot.orderBars.js"></script>
-    <script src="bower_components/flot/jquery.flot.pie.js"></script>
-    <script src="bower_components/flot.tooltip/js/jquery.flot.tooltip.min.js"></script>
-    <script src="bower_components/angular-nouislider/src/nouislider.min.js"></script>
-    <script src="bower_components/angular-permission/dist/angular-permission.min.js"></script>
-    <script src="bower_components/angular-permission/dist/angular-permission-ui.min.js"></script>
-    <script src="bower_components/bootstrap-angular-validation/dist/bootstrap-angular-validation.min.js"></script>
-
-    <script src="../bower_components/ng-file-upload/ng-file-upload.min.js"></script>
-
-    <!-- App level -->
-    <script src="scripts/app.js"></script>
-    <script src="scripts/states.js"></script>
-    <script src="scripts/services.js"></script>
-    <script src="scripts/templates.js"></script>
-
-    <!-- Template Modules -->
-    <script src="scripts/modules/template.js"></script>
-    <script src="scripts/modules/ui.js"></script>
-    <script src="scripts/modules/charts/flot.js"></script>
-    <script src="scripts/modules/charts/other-charts.js"></script>
-    <script src="scripts/modules/form.js"></script>
-
-    <script src="scripts/core/app.js"></script>
-    <script src="scripts/global.controller.js"></script>
-    <script src="scripts/controllers/header.controller.js"></script>
-    <script src="scripts/dashboard/dashboard.controller.js"></script>
-    <script src="scripts/core/generic.directive.js"></script>
-    <script src="scripts/services/ng.table.service.js"></script>
-    <script src="scripts/services/growl.service.js"></script>
-    <script src="scripts/auth/auth.controller.js"></script>
-    <script src="scripts/auth/password.reset.controller.js"></script>
-    <script src="scripts/auth/session.service.js"></script>
+    Hello this is me.
 
     <script src="scripts/organization/organization.model.js"></script>
     <script src="scripts/organization/organization.list.controller.js"></script>
